--- a/mans stils.css
+++ b/mans stils.css
@@ -2,6 +2,12 @@
 Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to edit this template
 */
+body,h1,h2,h3,h4,h5,h6 {font-family: "Book Antiqua", sans-serif}
+.w3-border{color: #bed7ff !important;}
+.w3-bar-block .w3-bar-item {padding:20px}
+body{background-color#EAF2FF;}
+.w3-top{background-color:#bed7ff;}
+.w3-bar-item:hover{background-color:#6ea5ff !important; color:white !important;}
 /* 
     Created on : Mar 21, 2025, 11:09:03 AM
     Author     : mtidrike3
